--- a/new.html
+++ b/new.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    This page will be hosted on Github.
-    <img src="images/mwtiedostokoko.JPG">
+    another page
 </body>
 </html>
